# search_8puzzle

./: CMakeLists.txt  README.md  sonar-project.properties
src/: 8puzzle.cpp  8puzzle.h  main.cpp
src/heuristicas/: marcosHideki_0_heuristicas.cpp  marcosHideki_0_heuristicas.h
src/largura/: marcosHideki_0_largura.cpp  marcosHideki_0_largura.h
src/profundidade/: marcosHideki_0_profundidade.cpp  marcosHideki_0_profundidade.h
